--- a/supreme_core/views/hr_employee_views.xml
+++ b/supreme_core/views/hr_employee_views.xml
@@ -1,76 +1,155 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
-    <!-- Inherit Employee Form View -->
+    <!-- Employee Form View - MuK Theme Compatible -->
     <record id="view_employee_form_inherit_supreme" model="ir.ui.view">
         <field name="name">hr.employee.form.supreme</field>
         <field name="model">hr.employee</field>
         <field name="inherit_id" ref="hr.view_employee_form"/>
+        <field name="priority">20</field>
         <field name="arch" type="xml">
-            <!-- Add Employee Code after name -->
+            <!-- Add Employee Code with responsive design -->
             <field name="name" position="after">
-                <field name="employee_code" readonly="1"/>
+                <field name="employee_code" 
+                       readonly="1"
+                       class="o_text_overflow"/>
             </field>
             
-            <!-- Add new page for Supreme HRMS fields -->
+            <!-- Add Supreme HRMS tab - MuK chatter compatible -->
             <notebook position="inside">
-                <page string="Additional Information" name="supreme_info">
-                    <group>
-                        <group string="Personal Details">
-                            <field name="blood_group"/>
-                            <field name="work_location_type"/>
-                        </group>
-                        <group string="Emergency Contact">
-                            <field name="emergency_contact_name"/>
-                            <field name="emergency_contact_phone"/>
-                            <field name="emergency_contact_relation"/>
-                        </group>
-                    </group>
-                    <group>
-                        <group string="Banking Information">
-                            <field name="bank_account_number"/>
-                            <field name="bank_name"/>
-                            <field name="bank_branch"/>
-                            <field name="bank_ifsc"/>
-                        </group>
-                    </group>
+                <page string="Supreme HRMS" name="supreme_info">
+                    <!-- Use responsive grid layout -->
+                    <div class="o_group row">
+                        <div class="o_inner_group col-lg-6">
+                            <group string="Personal Details">
+                                <field name="blood_group" 
+                                       widget="selection"/>
+                                <field name="work_location_type" 
+                                       widget="selection_badge"
+                                       options="{'color_field': 'work_location_color'}"/>
+                            </group>
+                            
+                            <group string="Emergency Contact">
+                                <field name="emergency_contact_name" 
+                                       placeholder="Contact Name"
+                                       class="o_text_overflow"/>
+                                <field name="emergency_contact_phone" 
+                                       widget="phone"
+                                       options="{'enable_sms': true}"/>
+                                <field name="emergency_contact_relation"
+                                       placeholder="Relationship"/>
+                            </group>
+                        </div>
+                        
+                        <div class="o_inner_group col-lg-6">
+                            <group string="Banking Information">
+                                <field name="bank_account_number" 
+                                       password="True"
+                                       placeholder="Account Number"/>
+                                <field name="bank_name"
+                                       placeholder="Bank Name"/>
+                                <field name="bank_branch"
+                                       placeholder="Branch"/>
+                                <field name="bank_ifsc"
+                                       placeholder="IFSC/SWIFT Code"/>
+                            </group>
+                            
+                            <group string="Government IDs" 
+                                   attrs="{'invisible': [('country_id', '!=', 'IN')]}">
+                                <field name="aadhar_number" 
+                                       password="True"/>
+                                <field name="pan_number"/>
+                            </group>
+                        </div>
+                    </div>
                 </page>
             </notebook>
+            
+            <!-- Enhance chatter for MuK theme -->
+            <xpath expr="//div[hasclass('oe_chatter')]" position="attributes">
+                <attribute name="class" add="o-mail-Form-chatter" separator=" "/>
+            </xpath>
         </field>
     </record>
 
-    <!-- Tree View -->
+    <!-- Tree View - MuK Responsive -->
     <record id="view_employee_tree_inherit_supreme" model="ir.ui.view">
         <field name="name">hr.employee.tree.supreme</field>
         <field name="model">hr.employee</field>
         <field name="inherit_id" ref="hr.view_employee_tree"/>
         <field name="arch" type="xml">
+            <!-- Add employee code with MuK styling -->
             <field name="name" position="before">
-                <field name="employee_code"/>
+                <field name="employee_code" 
+                       class="fw-bold text-primary"
+                       optional="show"/>
             </field>
+            
+            <!-- Work location with badges -->
             <field name="work_location_id" position="after">
-                <field name="work_location_type"/>
+                <field name="work_location_type" 
+                       widget="badge"
+                       decoration-info="work_location_type == 'office'"
+                       decoration-success="work_location_type == 'home'"
+                       decoration-warning="work_location_type == 'hybrid'"
+                       optional="show"/>
             </field>
         </field>
     </record>
 
-    <!-- Search View -->
+    <!-- Kanban View - MuK Theme Compatible -->
+    <record id="view_employee_kanban_inherit_supreme" model="ir.ui.view">
+        <field name="name">hr.employee.kanban.supreme</field>
+        <field name="model">hr.employee</field>
+        <field name="inherit_id" ref="hr.hr_kanban_view_employees"/>
+        <field name="arch" type="xml">
+            <xpath expr="//div[hasclass('oe_kanban_details')]" position="inside">
+                <div class="o_kanban_record_bottom mt-2">
+                    <div class="oe_kanban_bottom_left">
+                        <field name="employee_code" class="badge bg-primary"/>
+                        <field name="work_location_type" 
+                               widget="label_selection"
+                               options="{'classes': {'office': 'info', 'home': 'success', 'hybrid': 'warning'}}"/>
+                    </div>
+                </div>
+            </xpath>
+        </field>
+    </record>
+
+    <!-- Search View with MuK filters -->
     <record id="view_employee_search_inherit_supreme" model="ir.ui.view">
         <field name="name">hr.employee.search.supreme</field>
         <field name="model">hr.employee</field>
         <field name="inherit_id" ref="hr.view_employee_filter"/>
         <field name="arch" type="xml">
             <field name="name" position="after">
-                <field name="employee_code"/>
+                <field name="employee_code" 
+                       string="Employee ID"
+                       filter_domain="[('employee_code', 'ilike', self)]"/>
             </field>
+            
             <filter name="inactive" position="after">
                 <separator/>
-                <filter string="Office" name="office" domain="[('work_location_type','=','office')]"/>
-                <filter string="Work from Home" name="wfh" domain="[('work_location_type','=','home')]"/>
-                <filter string="Hybrid" name="hybrid" domain="[('work_location_type','=','hybrid')]"/>
+                <filter string="🏢 Office" 
+                        name="office" 
+                        domain="[('work_location_type','=','office')]"
+                        help="Employees working from office"/>
+                <filter string="🏠 Work from Home" 
+                        name="wfh" 
+                        domain="[('work_location_type','=','home')]"
+                        help="Remote employees"/>
+                <filter string="🔄 Hybrid" 
+                        name="hybrid" 
+                        domain="[('work_location_type','=','hybrid')]"
+                        help="Hybrid work mode"/>
             </filter>
+            
             <group position="inside">
-                <filter string="Work Location" name="group_work_location" context="{'group_by':'work_location_type'}"/>
-                <filter string="Blood Group" name="group_blood" context="{'group_by':'blood_group'}"/>
+                <filter string="Work Location" 
+                        name="group_work_location" 
+                        context="{'group_by':'work_location_type'}"/>
+                <filter string="Blood Group" 
+                        name="group_blood" 
+                        context="{'group_by':'blood_group'}"/>
             </group>
         </field>
     </record>
